--- a/EWSEditor/EWSEditor.csproj
+++ b/EWSEditor/EWSEditor.csproj
@@ -15,10 +15,14 @@
     <UpgradeBackupLocation>
     </UpgradeBackupLocation>
     <OldToolsVersion>3.5</OldToolsVersion>
-    <SccProjectName>SAK</SccProjectName>
-    <SccLocalPath>SAK</SccLocalPath>
-    <SccAuxPath>SAK</SccAuxPath>
-    <SccProvider>SAK</SccProvider>
+    <SccProjectName>
+    </SccProjectName>
+    <SccLocalPath>
+    </SccLocalPath>
+    <SccAuxPath>
+    </SccAuxPath>
+    <SccProvider>
+    </SccProvider>
     <ApplicationIcon>Resources\EWSEditor2.ico</ApplicationIcon>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <StartupObject>EWSEditor.Program</StartupObject>
@@ -317,6 +321,12 @@
     </Compile>
     <Compile Include="Forms\Dialogs\SelectPSetId.Designer.cs">
       <DependentUpon>SelectPSetId.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Forms\Discovery\AutodiscoverResultForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\Discovery\AutodiscoverResultForm.Designer.cs">
+      <DependentUpon>AutodiscoverResultForm.cs</DependentUpon>
     </Compile>
     <Compile Include="Forms\Discovery\DomainSettingsForm.cs">
       <SubType>Form</SubType>
